Main activity kész!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Mobil_negyedik_ora</string>
+    <string name="empty_list">empty_list</string>
 </resources>
