--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Mobil_negyedik_ora</string>
     <string name="empty_list">empty_list</string>
+    <string name="no_items">no_item</string>
 </resources>
